<resources>
    <string name="app_name">Water Track</string>
    <string name="hint_title">полезный совет</string>

    <string name="stats_button">Статистика</string>
    <string name="history_text">История выпитой воды за сегодня</string>
    <string name="history_change">На какое значение Вы хотите изменить?</string>
    <string name="history_new_value">Новое значение:</string>

    <string name="statistic_activity_title">Статистика</string>
    <string name="statistic_weekly_title">Еженедельное завершение</string>
    <string name="statistic_history_title">История выпитой воды за неделю</string>
    <string name="statistic_report_title">Отчёт о потреблении воды</string>
    <string name="statistic_last_day">Последний день</string>
    <string name="statistic_report_weekly">Средненедельный</string>
    <string name="statistic_report_average_finish">Среднее завершение</string>
    <string name="statistic_hint_title">мотивация</string>
    <string name="statistic_hint">Ежедневное употребление воды поддерживает Вас энергичным и бодрым, а также очищает и увлажняет кожу.</string>

    <string name="add_fragment_title">Сколько воды Вы выпили?</string>
    <string name="custom_value">Свое значение:</string>

    <string name="final_count_title">Введите норму воды в день</string>

    <string name="cancel_button">Отмена</string>
    <string name="save_button">Сохранить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>