<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundSplash"
    android:background="@drawable/round_corner_10"
    android:padding="15dp">

    <TextView
        android:id="@+id/changeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_change"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>


    <LinearLayout
        android:id="@+id/changeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeTitle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/history_new_value"/>

        <EditText
            android:id="@+id/customAddChangeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_corner_10"
            android:backgroundTint="@color/backgroundGray"
            android:hint="180"
            android:maxLength="4"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeLayout">
        <Button
            android:id="@+id/cancelChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_margin="10dp"
            android:padding="13dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/saveChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textSize="14sp"
            android:backgroundTint="@color/primary"
            android:layout_margin="10dp"
            android:padding="13dp"
            android:layout_weight="1"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>