<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundSplash"
    android:background="@drawable/round_corner_10"
    android:padding="15dp">

    <TextView
        android:id="@+id/addTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_fragment_title"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitle">
        <RadioButton
            android:id="@+id/radio_350"
            android:background="@drawable/radio_button"
            android:button="@drawable/radio_button"
            android:text="350 ml"
            android:tag="350"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_500"
            android:background="@drawable/radio_button"
            android:button="@drawable/radio_button"
            android:text="500 ml"
            android:tag="500"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_1000"
            android:background="@drawable/radio_button"
            android:button="@drawable/radio_button"
            android:text="1000 ml"
            android:tag="1000"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/custom_value"/>

        <EditText
            android:id="@+id/customAddValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_corner_10"
            android:backgroundTint="@color/backgroundGray"
            android:textColor="@color/blackText"
            android:hint="230"
            android:maxLength="4"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3">
        <Button
            android:id="@+id/cancelAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/backgroundSplash"
            android:layout_margin="10dp"
            android:padding="13dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/saveAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textSize="14sp"
            android:backgroundTint="@color/primary"
            android:layout_margin="10dp"
            android:padding="13dp"
            android:layout_weight="1"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>