<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context=".Fragments.StatisticFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/statistic_activity_title"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/round_corner_10"
                android:orientation="vertical"
                android:elevation="@dimen/elevation_s"
                android:padding="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_weekly_title"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="пн"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="вт"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ср"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="чт"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="пт"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="сб"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.14"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:background="@drawable/day_not_finish"
                            android:layout_width="25sp"
                            android:layout_height="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="вс"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/stats_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistic_history_title"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_medium"/>

            <LinearLayout
                android:id="@+id/statsHistoryBlank"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/stats_stick"
                    android:background="@drawable/statistic_stick_background_inactive"
                    android:layout_width="4sp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_marginVertical="16dp"
                    android:layout_width="140dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:text="Пусто" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleStats"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/statistic_report_title"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal" android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_last_day"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/last_day_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Пусто"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textColor="@color/primary" />
            </LinearLayout>
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal" android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_report_weekly"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/weekly_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Пусто"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textColor="@color/primary" />
            </LinearLayout>
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal" android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_report_average_finish"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/average_finish_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Пусто"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textColor="@color/primary" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:textColor="@color/primary" />
            </LinearLayout>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hint_background"
                android:layout_margin="20dp"
                android:paddingVertical="15dp"
                android:paddingHorizontal="25dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_hint_title"
                    android:textSize="12sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/primary"/>
                <TextView
                    android:id="@+id/randomHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/statistic_hint"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>